--- a/config/openai.toml
+++ b/config/openai.toml
@@ -7,3 +7,8 @@ code_pro = "gpt-4.1"
 long_1M = "gpt-4.1"
 review_64k = "gpt-4.1"
 fast_8k = "gpt-4.1"
+
+[ui]
+auto_rewrite = false
+auto_continue_draft = false
+auto_continue_checkpoint = false
